[package]
name = "twitchpubsub"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/112batuhan/twitchpubsub-rs"
readme = "README.md"
description = "A twitch.tv pubsub websocket library to receive channel reward events. Made for my main project."
license = "MIT OR Apache-2.0"
keywords = ["twitch", "pubsub"]
authors = ["112servis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite =  { version = "0.17", features= ["native-tls"] }
url = "2.2"
env_logger = "0.9.0"
tokio = {version = "1.19", features = ["full"]}
futures-util = "0.3"
futures-channel = "0.3"
futures = "0.3"
rodio = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
random-string = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
